# learncpp

./: .gitignore  README.md
chaps/: chap01_basic_syntax.md  chap02_func_n_files.md  chap03_debugging.md  chap04_fundamental_data_types.md  chap05_const_n_string.md  chap06_operators.md  chap07_scope_duration_linkage.md  chap08_control_flow.md  chap09_error_detect_n_handle.md  chap09_testing.md  chap10_type_conversion_alias_deduct.md  chap11F_constexpr_n_consteval.md  chap11_func_overloading.md
chaps/chap10/: arithmetic_conversion_rules.md  full_list__standard_conversions.md
chaps/chap3/: 3_10.md
chaps/chap3/3_8/: main.cpp
chaps/chap3/3_9/: main.cpp
chaps/chap3/3_debugging/helloworld/: text.txt
chaps/chap4/: 4_11_escape-sequences.md  type_ranges_n_sizes.md
chaps/chap4/4_03_size-of/: main.cpp
chaps/chap9/: input_validation.cpp  tests_for_types.md
native-cpp-library/: README.md
native-cpp-library/Matrix/: CMakeLists.txt  CMakePresets.json
native-cpp-library/Matrix/include/Matrix/: Matrix.h  Operators.h
native-cpp-library/Matrix/lib/Matrix/: Matrix.cpp
native-cpp-library/Matrix/src/: howdy.cpp
native-cpp-library/Matrix/tests/: Matrix.cpp  Operators.cpp
